; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_string.c_str_init_normal.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_string.c_str_init_normal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RString = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.RString* (i32*, %struct.RString*, i8*, i64)* @str_init_normal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.RString* @str_init_normal(i32* %0, %struct.RString* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.RString*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store %struct.RString* %1, %struct.RString** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load %struct.RString*, %struct.RString** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = load i64, i64* %8, align 8
  %14 = call %struct.RString* @str_init_normal_capa(i32* %9, %struct.RString* %10, i8* %11, i64 %12, i64 %13)
  ret %struct.RString* %14
}

declare dso_local %struct.RString* @str_init_normal_capa(i32*, %struct.RString*, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
